<resources>
    <string name="app_name">App</string>

    <string name="title_search">Search</string>
    <string name="title">Title</string>
    <string name="title_favorites">Favourites</string>
    <string name="title_breeds">Breeds</string>
    <string name="important_action">Important Action</string>
    <string name="favourite_saved">Now its one of your favourites!</string>
    <string name="favourite_deleted">You don\'t like it enough to be Favourite!</string>
    <string name="breed_details_title">Breed\'s info</string>
    <string name="ok">OK</string>
    <string name="breed_stats">Breed Stats</string>
    <string name="excerise_needs">Exercise needs</string>
    <string name="trainability">Trainability</string>
    <string name="grooming">Grooming</string>
    <string name="adaptability">Adaptability</string>
    <string name="friendliness">Friendliness</string>
</resources>
